trying to fix spacing between drop cap and rest of text

--- a/css/style.css
+++ b/css/style.css
@@ -115,5 +115,5 @@ a.button:hover, a.button:active {
   font-size: 4.5em;
   float: left;
   line-height: .60;
-  margin-right: 0.5 em;
+  margin-right: 0.2 em;
 }
